--- a/offres.html
+++ b/offres.html
@@ -19,6 +19,7 @@
 <div class="auth-container flex-column flex-align-content-center-ca">
     <div class="auth flex-align-content-center-ca">
         <div class="offer-text">
+            <img src="img/logo.png" alt="Logo" class="login-logo">
             <h1>Offres de stage</h1>
             <h2>Authentificate to gain access to the platform</h2>
         </div>
