--- a/offres.html
+++ b/offres.html
@@ -16,8 +16,8 @@
     <!-- /PWA -->
 </head>
 <body>
-<div class="auth-container flex-column flex-align-content-center-ca">
-    <div class="auth flex-align-content-center-ca">
+<div class="offre-main-section">
+    <div class="offre-sub-section">
         <div class="offer-text">
             <h1>Offres de stage</h1>
             <h2>Authentificate to gain access to the platform</h2>
