--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Login Page</title>
+    <title>offres</title>
     <link href="style.css" rel="stylesheet">
     <link href="fonts/fontawesome 6.3/css/solid.css" rel="stylesheet">
     <link href="fonts/fontawesome 6.3/css/regular.css" rel="stylesheet">
@@ -18,8 +18,9 @@
 <body>
 <div class="auth-container flex-column flex-align-content-center-ca">
     <div class="auth flex-align-content-center-ca">
-        <div class="auth-text">
-            <h1>Login</h1>
+        <div class="offer-text">
+            <img src="img/logo.png" alt="Logo" class="login-logo">
+            <h1>Offres de stage</h1>
             <h2>Authentificate to gain access to the platform</h2>
         </div>
         <div class="auth-input">
