--- a/V1/offres.html
+++ b/V1/offres.html
@@ -18,8 +18,10 @@
 <body>
 <div class="offre-main-section">
     <div class="offre-sub-section">
+        <div class="img-fond">
+            
+        </div>
         <div class="offer-text">
-            <img src="img/logo.png" alt="Logo" class="login-logo">
             <h1>Offres de stage</h1>
             <h2>Authentificate to gain access to the platform</h2>
         </div>
